--- a/components/Register.css
+++ b/components/Register.css
@@ -1,8 +1,19 @@
-.ui.error.message p,
-{
+/* form body */
+
+.ui.stacked.segment {
+    padding-bottom: 1.5em
+}
+
+
+/* error message */
+
+.ui.error.message p {
     font-weight: 500;
     text-align: left
 }
+
+
+/* text fields */
 
 .ui.message .header+p {
     font-weight: 500;
