--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,5 @@
 .ui.stacked.segment {
-    padding-bottom: 1.5em
+    padding-bottom: 1.5em;
 }
 
 
@@ -7,7 +7,7 @@
 
 .ui.error.message p {
     font-weight: 500;
-    text-align: center
+    text-align: center;
 }
 
 
@@ -15,11 +15,15 @@
 
 .ui.message .header+p {
     font-weight: 500;
-    text-align: center
+    text-align: center;
 }
 
 
 /* main application styling */
+
+.ui.grid.hillfinder-container {
+    padding: 0 2rem
+}
 
 .main-container {
     padding: 3rem;
@@ -71,4 +75,8 @@
     text-align: center;
     color: white;
     font-weight: bold;
+}
+
+input {
+    font-size: 16px;
 }
