--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -22,7 +22,7 @@
 /* main application styling */
 
 .ui.grid.hillfinder-container {
-    padding: 0 2rem
+    padding: 0 2rem;
 }
 
 .main-container {
@@ -77,6 +77,8 @@
     font-weight: bold;
 }
 
-input {
-    font-size: 16px;
+.leaflet-container {
+    height: 400px;
+    width: 80%;
+    margin: 0 auto;
 }
