--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -80,6 +80,10 @@
 .leaflet-container {
     height: 400px;
     width: 80%;
-    margin: 0 auto;
+    margin: 2rem auto 0;
     border-radius: 0.28571429rem;
+}
+
+input.animate-panning {
+    margin-right: 0.5rem;
 }
