--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -87,3 +87,9 @@
 input.animate-panning {
     margin-right: 0.5rem;
 }
+
+.process__upload-btn {
+    display: block;
+    margin: 2.5rem auto;
+    text-align: center;
+}
