styles for confirmation component

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -91,6 +91,12 @@ input.animate-panning {
 
 /* confirmation page */
 
-.ui.error.message {
+.ui.message.confirmation {
     height: 3.5em
 }
+
+// #success.ui.success.message.confirmation.success {
+//     height: 10em;
+//     background-color: #fcfff5 !important;
+//     color: #2c662d !important;
+// }
