decided not to re-include the styles from the modules to fix why the eye glass icon is not rendering

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -89,6 +89,24 @@ input.animate-panning {
 }
 
 
+/* map styles */
+
+@media only screen and (min-width: 0px) {
+    .leaflet-container.leaflet-touch.leaflet-fade-anim.leaflet-grab.leaflet-touch-drag.leaflet-touch-zoom {
+        height: 480px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .ui.grid.container {
+        width: 95% !important;
+    }
+    .leaflet-container.leaflet-touch.leaflet-fade-anim.leaflet-grab.leaflet-touch-drag.leaflet-touch-zoom {
+        height: 600px;
+    }
+}
+
+
 /* confirmation page */
 
 .ui.message.confirmation {
