added map styles

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -110,7 +110,7 @@ input.animate-panning {
 /* confirmation page */
 
 .ui.message.confirmation {
-    height: 3.5em
+    height: 3.5em;
 }
 
 // #success.ui.success.message.confirmation.success {
