moving to next@latest

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -149,7 +149,7 @@ input.animate-panning {
 }
 
 .remove-marker {
-    background-image: url(/static/media/remove-marker-2x.png);
+    background-image: url(/media/remove-marker-2x.png);
     background-size: 73%;
 }
 
@@ -207,7 +207,7 @@ input.animate-panning {
 }
 
 .geocoder-control-input {
-    background-image: url(/static/media/search@2x.png);
+    background-image: url(/media/search@2x.png);
 }
 
 
