--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -32,3 +32,27 @@ ul.p-4.overflow-y-auto.menu.w-80.bg-base-100 {
     opacity: 0.8;
     color: #6f6565;
 }
+
+.loader {
+    border-top-color: #386F22;
+    -webkit-animation: spinner 1.5s linear infinite;
+    animation: spinner 1.5s linear infinite;
+}
+
+@-webkit-keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spinner {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
