--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,8 +1,10 @@
 .content,
 .bg-logo {
-    height: 1000px;
+    height: 100vh;
     display: flex;
     padding: 0;
+    display: flex;
+    align-items: center;
     justify-content: center;
     z-index: -1;
     background: linear-gradient(#5dad2f, transparent), linear-gradient(to top left, #2e5a1c, transparent), linear-gradient(to top right, #214414, transparent);
@@ -21,7 +23,7 @@
     background-image: url('/logo/hillfinder-logo.png');
     background-repeat: no-repeat;
     opacity: .1;
-    background-position: center 70%;
+    background-position: center 80%;
     /* Specify the background image */
     background-size: contain;
     height: 100%;
