added auth protection for private routes and implemented auth with passport and swr

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,8 +2,10 @@
     box-sizing: border-box;
 }
 
-
-/*overides */
+html,
+body {
+    background-color: #4e9525;
+}
 
 .navbar {
     border-bottom: 1px solid #386F22;
