--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,12 +1,8 @@
     @media only screen and (orientation:portrait) {
-        .content,
         .bg-logo {
             height: 100vh;
-            display: flex;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: 100%;
+            display: block;
             z-index: 1;
             background: linear-gradient(#5dad2f, transparent), linear-gradient(to top left, #2e5a1c, transparent), linear-gradient(to top right, #214414, transparent), url('/logo/hillfinder-logo.png') center;
             background-repeat: no-repeat;
@@ -16,17 +12,15 @@
     // @media (max-width: 767px) and (orientation: landscape) {
     // }
     @media only screen and(orientation: landscape) {
-        .content,
         .bg-logo {
             height: 100vh;
-            display: flex;
+            width: 100%;
             padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            display: block;
             z-index: 1;
             background: linear-gradient(#5dad2f, transparent), linear-gradient(to top left, #2e5a1c, transparent), linear-gradient(to top right, #214414, transparent), url('/logo/hillfinder-logo.png') center;
             background-repeat: no-repeat;
+            ;
             /* Set up positioning */
         }
     }
