--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -2,7 +2,7 @@
         .bg-logo {
             height: 100vh;
             width: 100%;
-            display: block;
+            display: inline-table;
             z-index: 1;
             background: linear-gradient(#5dad2f, transparent), linear-gradient(to top left, #2e5a1c, transparent), linear-gradient(to top right, #214414, transparent), url('/logo/hillfinder-logo.png') center;
             background-repeat: no-repeat;
@@ -16,7 +16,7 @@
             height: 100vh;
             width: 100%;
             padding: 0;
-            display: block;
+            display: inline-table;
             z-index: 1;
             background: linear-gradient(#5dad2f, transparent), linear-gradient(to top left, #2e5a1c, transparent), linear-gradient(to top right, #214414, transparent), url('/logo/hillfinder-logo.png') center;
             background-repeat: no-repeat;
@@ -25,18 +25,17 @@
         }
     }
     
-    @media (orientation: portrait) and (hover: none) and (pointer: coarse) {
-        /* your CSS to target only landscape mobile users */
-        .bg-logo:after {
-            background-position: center 220px;
-            background-size: contain;
-        }
-    }
-    
-    @media (orientation: landscape) and (hover: none) and (pointer: coarse) {
-        /* your CSS to target only landscape mobile users */
-        .bg-logo:after {
-            background-position: center 60px;
-            background-size: contain;
-        }
-    }
+    // @media (orientation: portrait) and (hover: none) and (pointer: coarse) {
+    //     /* your CSS to target only landscape mobile users */
+    //     .bg-logo:after {
+    //         background-position: center 220px;
+    //         background-size: contain;
+    //     }
+    // }
+    // @media (orientation: landscape) and (hover: none) and (pointer: coarse) {
+    //     /* your CSS to target only landscape mobile users */
+    //     .bg-logo:after {
+    //         background-position: center 60px;
+    //         background-size: contain;
+    //     }
+    // }
