--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -67,6 +67,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-    transition: background-color 5000s ease-in-out 0s;
+    // transition: background-color 5000s ease-in-out 0s;
     font-size: 16px;
+    border-width: 2px;
 }
