--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -71,3 +71,14 @@ input:-webkit-autofill:active {
     font-size: 16px;
     border-width: 2px;
 }
+
+// leaflet styles
+.leaflet-container {
+    height: 100%;
+    width: 100%;
+}
+
+// leaflet draw dependent style
+.sr-only {
+    display: none;
+}
